Bug 771934 - Throw NOT_FOUND_ERR instead of HIERARCHY_REQUEST_ERR from nsINode::RemoveChild; r=bz